{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 55,
  "lineage": "936fb232-3a5c-b6f1-6bb6-876251d86964",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:security-group/sg-09eb2145e323b3f8d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09eb2145e323b3f8d",
            "ingress": [],
            "name": "notes-app-production-cluster-2026030911121922090000000b",
            "name_prefix": "notes-app-production-cluster-",
            "owner_id": "247688347885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notes-app-production-cluster"
            },
            "tags_all": {
              "Name": "notes-app-production-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:security-group/sg-07f522035a9e24b4e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07f522035a9e24b4e",
            "ingress": [],
            "name": "notes-app-production-node-2026030911121924140000000d",
            "name_prefix": "notes-app-production-node-",
            "owner_id": "247688347885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notes-app-production-node",
              "kubernetes.io/cluster/notes-app-production": "owned"
            },
            "tags_all": {
              "Name": "notes-app-production-node",
              "kubernetes.io/cluster/notes-app-production": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3404442998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09eb2145e323b3f8d",
            "security_group_rule_id": "sgr-0120d45e6c51aa8f1",
            "self": false,
            "source_security_group_id": "sg-07f522035a9e24b4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3567518897",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-0129d8cb3842bbd36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-307476672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-0e6653fb292fc4f63",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1761445433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-017852f819f76804c",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2713706927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-05819ac163d17cb54",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3001277838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-097cd842237a0187e",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3594710597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-0712fb145034340bc",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3615779910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-0d387e2f5eee4a757",
            "self": false,
            "source_security_group_id": "sg-09eb2145e323b3f8d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3722367435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-04e4a5149c2853522",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4142056398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-0393e1ca746707f42",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1388142625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07f522035a9e24b4e",
            "security_group_rule_id": "sgr-03e2cd63d84f9a49b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:network-acl/acl-05af9c7e3c0dad757",
            "default_network_acl_id": "acl-05af9c7e3c0dad757",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05af9c7e3c0dad757",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "247688347885",
            "subnet_ids": [
              "subnet-01f05611bf7364962",
              "subnet-0e0d0ee7fb50b1462",
              "subnet-0ead9857e4a71a369"
            ],
            "tags": {
              "Name": "notes-app-production-vpc-default"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-default"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:route-table/rtb-09dcbef2cca03edad",
            "default_route_table_id": "rtb-09dcbef2cca03edad",
            "id": "rtb-09dcbef2cca03edad",
            "owner_id": "247688347885",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "notes-app-production-vpc-default"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:security-group/sg-0782913efc0da7d60",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0782913efc0da7d60",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "247688347885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notes-app-production-vpc-default"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-default"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c50fdb82608edaf",
            "arn": "arn:aws:ec2:eu-west-1:247688347885:elastic-ip/eipalloc-08c50fdb82608edaf",
            "domain": "vpc",
            "id": "eipalloc-08c50fdb82608edaf",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-248-23-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.248.23.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "notes-app-production-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:internet-gateway/igw-0e332ab0c6acd370d",
            "id": "igw-0e332ab0c6acd370d",
            "owner_id": "247688347885",
            "tags": {
              "Name": "notes-app-production-vpc"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c50fdb82608edaf",
            "association_id": "eipassoc-00a97799433428dd8",
            "connectivity_type": "public",
            "id": "nat-035b0d97b070e25d0",
            "network_interface_id": "eni-0f3ede4e11af68646",
            "private_ip": "10.0.101.71",
            "public_ip": "34.248.23.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e0d0ee7fb50b1462",
            "tags": {
              "Name": "notes-app-production-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-eu-west-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e8fff5bbd8ddc081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035b0d97b070e25d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e8fff5bbd8ddc08",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e332ab0c6acd370d",
            "id": "r-rtb-07db46fcbae838b241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07db46fcbae838b24",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:route-table/rtb-02e8fff5bbd8ddc08",
            "id": "rtb-02e8fff5bbd8ddc08",
            "owner_id": "247688347885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "notes-app-production-vpc-private"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:route-table/rtb-07db46fcbae838b24",
            "id": "rtb-07db46fcbae838b24",
            "owner_id": "247688347885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "notes-app-production-vpc-public"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f386b45a9106d098",
            "route_table_id": "rtb-02e8fff5bbd8ddc08",
            "subnet_id": "subnet-018770c06357d2e72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ca9bb140033e980",
            "route_table_id": "rtb-02e8fff5bbd8ddc08",
            "subnet_id": "subnet-0ead9857e4a71a369"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2c04669be25927e",
            "route_table_id": "rtb-07db46fcbae838b24",
            "subnet_id": "subnet-0e0d0ee7fb50b1462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b34bc92b5ee2d188",
            "route_table_id": "rtb-07db46fcbae838b24",
            "subnet_id": "subnet-01f05611bf7364962"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:subnet/subnet-018770c06357d2e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018770c06357d2e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247688347885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-production-vpc-private-eu-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-private-eu-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:subnet/subnet-0ead9857e4a71a369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead9857e4a71a369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247688347885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-production-vpc-private-eu-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-private-eu-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:subnet/subnet-0e0d0ee7fb50b1462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0d0ee7fb50b1462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247688347885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-production-vpc-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-public-eu-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:subnet/subnet-01f05611bf7364962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f05611bf7364962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247688347885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-production-vpc-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc-public-eu-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b9304ca362e1235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247688347885:vpc/vpc-00b9304ca362e1235",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05af9c7e3c0dad757",
            "default_route_table_id": "rtb-09dcbef2cca03edad",
            "default_security_group_id": "sg-0782913efc0da7d60",
            "dhcp_options_id": "dopt-0fd7f78945d4eaf99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b9304ca362e1235",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dcbef2cca03edad",
            "owner_id": "247688347885",
            "tags": {
              "Name": "notes-app-production-vpc"
            },
            "tags_all": {
              "Name": "notes-app-production-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}